--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
 <body>
     <h1>Hache uno</h1>
     <p>Pe</p>
+
+    <table style="border: 1px solid black;">
+        <tr>
+            <td>Fila 1, Col 1</td>
+            <td>Fila 1, Col 2</td>
+        </tr>
+        <tr>
+            <td>Fila 2, Col 1</td>
+            <td>Fila 2, Col 2</td>
+        </tr>
+    </table>
 </body>
 </html>
