--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </tr>
         <tr>
             <td>F 2, C 1</td>
-            <td>F 2, C 2</td>
+            <td>Cambio</td>
         </tr>
     </table>
 </body>
